[package]
name = "bevy_jam_3"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
bevy = "0.10"
bevy_editor_pls = { version = "0.4.0", features = ["highlight_changes"], optional = true}
bevy_replicon = "0.1.0"
clap = { version = "4.2.1", features = ["derive"] }
leafwing-input-manager = "0.9.1"
surf = "2.3.2"
bevy_prototype_lyon = "0.8.0"
renet_visualizer = { version = "0.0.4", features = ["bevy"] }
lazy_static = "1.4.0"
serde = { version = "1.0.159", features = ["derive"] }
bevy_rapier2d = {version = "0.21.0", features = ["enhanced-determinism"]}
# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
