[package]
name = "stellar-squeezebox"
version = "0.1.3"
edition = "2021"
license = "MIT OR Apache-2.0"


[dependencies.bevy]
version = "0.10"
default-features = false
features = [
    "animation",
    "bevy_asset",
    "bevy_gilrs",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "png",
    "hdr",
    "ktx2",
    "zstd",
    "x11",
    "filesystem_watcher",
    "tonemapping_luts",
    "mp3"
]

[dependencies]
bevy_editor_pls = { version = "0.4.0", features = ["highlight_changes"], optional = true }
bevy_replicon = "0.2.3"
clap = { version = "4.2.1", features = ["derive"] }
leafwing-input-manager = "0.9.1"
surf = "2.3.2"
bevy_prototype_lyon = "0.8.0"
renet_visualizer = { version = "0.0.4", features = ["bevy"] }
serde = { version = "1.0.159", features = ["derive"] }
bevy_rapier2d = { version = "0.21.0", features = ["enhanced-determinism", "debug-render-2d"] }
rand = { version = "0.8.5" }
bevy_egui = "0.20"
egui = "0.21"
bevy-inspector-egui = "0.18"
futures-lite = "1.12.0"
bevy_kira_audio = { version = "0.15.0", features = ["mp3"] }
bevy_mod_reqwest = "0.10.2"
serde_json = "1.0.95"
smallvec = "1.10"
# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
